<resources>
    <string name="app_name">First1</string>

    //按钮名字
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="stock_hawk">STOCK HAWk</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiquitous">GO UBIQUITOUS</string>
    <string name="capston">CAPSTON</string>
</resources>
