<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:id="@+id/textView"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        style="@style/CustomButtonStyle"
        android:text="@string/popular_movies"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:onClick="showToastPopularMovie" />

    <Button
        style="@style/CustomButtonStyle"
        android:text="@string/stock_hawk"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignRight="@+id/button"
        android:onClick="showStockHawk" />

    <Button
        style="@style/CustomButtonStyle"
        android:text="@string/build_it_bigger"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:onClick="showBuildItBigger" />

    <Button
        style="@style/CustomButtonStyle"
        android:text="@string/make_your_app_material"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:onClick="showMakeYourAppMaterial" />

    <Button
        style="@style/CustomButtonStyle"
        android:text="@string/go_ubiquitous"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:onClick="showGoUbiquitous" />

    <Button
        style="@style/CustomButtonStyle"
        android:text="@string/capston"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignRight="@+id/button5"
        android:onClick="showCapston" />

</RelativeLayout>
</ScrollView>